--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.3.7",
     "@grpc/proto-loader": "^0.6.5",
+    "@pinata/sdk": "^1.1.23",
     "axios": "^0.22.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
@@ -38,6 +39,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
+    "express-fileupload": "^1.2.1",
+    "form-data": "^4.0.0",
     "helmet": "3.22.0",
     "knex": "^0.95.11",
     "loglevel": "^1.7.1",
