--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js --watch ./*"
+    "debug": "GRPC_TRACE=all GRPC_VERBOSITY=DEBUG nodemon index.js --watch library --watch controller --watch routes",
+    "start": "nodemon index.js --watch library --watch controller --watch routes"
   },
   "repository": {
     "type": "git",
@@ -40,6 +41,7 @@
     "express-basic-auth": "^1.2.0",
     "express-fileupload": "^1.2.1",
     "form-data": "^4.0.0",
+    "grpc": "^1.24.11",
     "helmet": "3.22.0",
     "knex": "^0.95.11",
     "loglevel": "^1.7.1",
