Update env example

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,21 @@
 # API
-API_TIMER_WINDOW=60
+API_TIMER_WINDOW=60000
 
 # LOGGING (trace, debug, info, warn, error)
 LOGLEVEL=debug
 
 # EXPRESS CONFIG
-EXPRESS_PORT=3001
+EXPRESS_PORT=3002
+CORS_HOST=*
 
 # LND CONFIG
 MACAROON=<HEX_STRING>
 TLS_PATH=./.keys/tls.cert
 LND_PORT=10002
 LND_HOST=localhost
+
+# FILES
+FILE_SIZE_LIMIT=20000000
 
 # PINATA CONFIG
 PINATA_KEY=
