--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "express": "^4.17.1",
     "express-basic-auth": "^1.2.0",
     "express-fileupload": "^1.2.1",
+    "firebase-admin": "^10.0.2",
     "form-data": "^4.0.0",
     "grpc": "^1.24.11",
     "helmet": "3.22.0",
