--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@google-cloud/storage": "^5.16.1",
     "@grpc/proto-loader": "^0.6.5",
+    "axios": "^0.26.1",
     "body-parser": "^1.19.0",
     "compression": "1.7.4",
     "cors": "2.8.5",
