Add artwork api

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "firebase-admin": "^10.0.2",
     "grpc": "^1.24.11",
     "helmet": "3.22.0",
+    "jimp": "^0.16.1",
     "knex": "^0.95.11",
     "loglevel": "^1.7.1",
     "nodemon": "^2.0.14",
